# uint-fortran

./: PKGBUILD  meson.build  meson_options.txt
config/: meson.build
src/: meson.build
test/: meson.build
