option(
  'openmp',
  type: 'boolean',
  value: false,
  yield: true,
  description: 'use OpenMP parallelisation',
)

option(
  'xdp',
  type: 'feature',
  value: 'auto',
  description: 'Support extended double precision',
)

option(
  'qp',
  type: 'feature',
  value: 'auto',
  description: 'Support quadruple precision',
)

option(
  'testing',
  type: 'feature',
  value: 'auto',
  description: 'Enable testing of uint-fortran library',
)
