srcs += files(
  'uint-io_m.F90',
  'uint-swap.f90',
  'uint64_m.f90',
  'intrinsic_functions_overload/dble_m.f90',
  'intrinsic_functions_overload/int_m.f90',
  'intrinsic_functions_overload/real_m.f90',
  'intrinsic_functions_overload/mod_m.f90',
  'uint32_m.f90',
  'types/uint64_t.f90',
  'types/uint32_t.f90',
  'types/uint8_t.f90',
  'types/uint16_t.f90',
  'intrinsic_operators_overload/the_four_arithmetic_operations/multiplication_m.f90',
  'intrinsic_operators_overload/the_four_arithmetic_operations/addition_m.f90',
  'intrinsic_operators_overload/the_four_arithmetic_operations/subtraction_m.f90',
  'intrinsic_operators_overload/the_four_arithmetic_operations/division_m.f90',
  'intrinsic_operators_overload/comparisons/less_than_m.f90',
  'intrinsic_operators_overload/comparisons/greater_than_m.f90',
  'intrinsic_operators_overload/comparisons/equivalence_m.f90',
  'intrinsic_operators_overload/power_m.f90',
  'assignment_m.F90',
  'uint16_m.f90',
  'unsigned_m.f90',
  'uint8_m.f90',
)
